2020-04-15  Markus Gans  <guru.mail@muenster.de>
	* Better support of general arrow keys
	* Improved event handling code

2020-04-13  Markus Gans  <guru.mail@muenster.de>
	* Several small code improvements

2020-04-09  Markus Gans  <guru.mail@muenster.de>
	* A dialog can now be displayed without a framing border.
	  Many thanks to basedtho for this tip

2020-03-22  Markus Gans  <guru.mail@muenster.de>
	* A small benchmakt test was added to the Rotozoomer example

2020-03-08  Markus Gans  <guru.mail@muenster.de>
	* A rotozoomer example was added to demonstrate the drawing speed 
	  of FINAL CUT

2020-03-07  Markus Gans  <guru.mail@muenster.de>
	* Fixes keyboard input buffer problem when opening a modal dialog
	* Exit the move-resize-mode when the close confirmation dialog 
	  is displayed

2020-03-05  Markus Gans  <guru.mail@muenster.de>
	* Unbuffered reading of keystrokes for better latency
	* Mouse adjustments when resizing an rxvt terminal

2020-02-25  Markus Gans  <guru.mail@muenster.de>
	* New command line switch "--no-terminal-data-request" to disable 
	  font and title determination

2020-02-19  Markus Gans  <guru.mail@muenster.de>
	* Some small code improvements
	* SGRoptimizer improved

2020-02-16  Markus Gans  <guru.mail@muenster.de>
	* Printing a FStyle object allows you to change video attributes

2020-02-13  Markus Gans  <guru.mail@muenster.de>
	* Rename setTransShadow() to setColorOverlay()

2020-02-11  Markus Gans  <guru.mail@muenster.de>
	* Fix collapse() and expand() in FListViewItem()

2020-02-09  Markus Gans  <guru.mail@muenster.de>
	* Adding a tty check for stdin
	* An application structure diagram was added to the document 
	  of the first steps

2020-02-04  Markus Gans  <guru.mail@muenster.de>
	* Fix in FListViewIterator
	* Add screenshorts to the first steps document

2020-02-02  Markus Gans  <guru.mail@muenster.de>
	* The methods clear() and remove() were added to FListView
	* Add some const type qualifiers