@@ -1,3 +1,6 @@
+2020-04-28  Markus Gans  <guru.mail@muenster.de>
+	* Adding the missing method getClientSize()
+
 2020-04-15  Markus Gans  <guru.mail@muenster.de>
 	* Better support of general arrow keys
 	* Improved event handling code
